BalancedLedger does not redeliver the last message